# Python-Modules

./: README.md
py_module_00/ex0/: ft_hello_garden.py
py_module_00/ex1/: ft_plot_area.py
py_module_00/ex2/: ft_harvest_total.py
py_module_00/ex3/: ft_plant_age.py
py_module_00/ex4/: ft_water_reminder.py
py_module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py_module_00/ex6/: ft_garden_summary.py
py_module_00/ex7/: ft_seed_inventory.py
py_module_01/ex0/: ft_garden_intro.py
py_module_01/ex1/: ft_garden_data.py
py_module_01/ex2/: ft_plant_growth.py
py_module_01/ex3/: ft_plant_factory.py
py_module_01/ex4/: ft_garden_security.py
py_module_01/ex5/: ft_plant_types.py
py_module_01/ex6/: ft_garden_analytics.py
py_module_02/ex0/: ft_first_exception.py
py_module_02/ex1/: ft_different_errors.py
py_module_02/ex2/: ft_custom_errors.py
py_module_02/ex3/: ft_finally_block.py
py_module_02/ex4/: ft_raise_errors.py
py_module_02/ex5/: ft_garden_management.py
py_module_03/ex0/: ft_command_quest.py
py_module_03/ex1/: ft_score_analytics.py
py_module_03/ex2/: ft_coordinate_system.py
py_module_03/ex3/: ft_achievement_tracker.py
py_module_03/ex4/: ft_inventory_system.py
py_module_03/ex5/: ft_data_stream.py
py_module_03/ex6/: ft_analytics_dashboard.py
py_module_04/ex0/: ft_ancient_text.py
py_module_04/ex1/: ft_archive_creation.py
py_module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
py_module_08/ex01/: loading.py  pyproject.toml  requirements.txt
(+48 files in other folders)
